--- a/front/package.json
+++ b/front/package.json
@@ -29,6 +29,8 @@
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
     "axios": "^0.24.0",
-    "chart.js": "^3.6.0"
+    "chart.js": "^3.6.0",
+    "crypto-js": "^4.1.1",
+    "sweetalert2": "^11.1.10"
   }
 }
