--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "izitoast": "^1.4.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.12",
     "request": "^2.88.2"
   },
   "license": "MIT",
